update selector component

--- a/_includes/popups/colorPickerPopup.html
+++ b/_includes/popups/colorPickerPopup.html
@@ -39,7 +39,7 @@
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -74,12 +74,12 @@
 
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required js_pmx-selector--incl-excl">
                   <div class="pmx-selector__value js_pmx-selector__value--include pmx-selector__value--selected">
-                    <div class="pmx-selector__label ">
+                    <div class="pmx-selector__block ">
                       <span class="" style="">Include</span>
                     </div>
                   </div>
                   <div class="pmx-selector__value js_pmx-selector__value--exclude">
-                    <div class="pmx-selector__label">
+                    <div class="pmx-selector__block">
                       <span class="">Exclude</span>
                     </div>
                   </div>
@@ -105,7 +105,7 @@
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -122,7 +122,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                        <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -139,7 +139,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                        <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -156,7 +156,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                        <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
