--- a/_includes/popups/multiSelector-advanced.html
+++ b/_includes/popups/multiSelector-advanced.html
@@ -20,10 +20,10 @@
 
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                   <div class="pmx-selector__value">
-                    <div class="pmx-selector__label ">
-                      <span class="pmx-selector__labelIcon">ބ</span>
-                      <span class="pmx-selector__labelType">Contain</span>
-                      <span class="pmx-selector__labelField">Field</span>
+                    <div class="pmx-selector__block ">
+                      <span class="pmx-selector__blockPrefix">ބ</span>
+                      <span class="pmx-selector__blockLabel">Contain</span>
+                      <span class="pmx-selector__blockField">Field</span>
                     </div>
                   </div>
                 </div>
@@ -44,10 +44,10 @@
 
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                   <div class="pmx-selector__value">
-                    <div class="pmx-selector__label ">
-                      <span class="pmx-selector__labelIcon">−</span>
-                      <span class="pmx-selector__labelType">Contain</span>
-                      <span class="pmx-selector__labelField">Field</span>
+                    <div class="pmx-selector__block ">
+                      <span class="pmx-selector__blockPrefix">−</span>
+                      <span class="pmx-selector__blockLabel">Contain</span>
+                      <span class="pmx-selector__blockField">Field</span>
                     </div>
                   </div>
                 </div>
@@ -69,10 +69,10 @@
 
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                   <div class="pmx-selector__value">
-                    <div class="pmx-selector__label ">
-                      <span class="pmx-selector__labelIcon">−</span>
-                      <span class="pmx-selector__labelType">Contain</span>
-                      <span class="pmx-selector__labelField">Field</span>
+                    <div class="pmx-selector__block ">
+                      <span class="pmx-selector__blockPrefix">−</span>
+                      <span class="pmx-selector__blockLabel">Contain</span>
+                      <span class="pmx-selector__blockField">Field</span>
                     </div>
                   </div>
                 </div>
@@ -243,10 +243,10 @@
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                         <div class="pmx-selector__value">
-                          <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelIcon">+</span>
-                            <span class="pmx-selector__labelType">Contain</span>
-                            <span class="pmx-selector__labelField">Field</span>
+                          <div class="pmx-selector__block ">
+                            <span class="pmx-selector__blockPrefix">+</span>
+                            <span class="pmx-selector__blockLabel">Contain</span>
+                            <span class="pmx-selector__blockField">Field</span>
                           </div>
                         </div>
                       </div>
@@ -267,10 +267,10 @@
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                         <div class="pmx-selector__value">
-                          <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelIcon">−</span>
-                            <span class="pmx-selector__labelType">Contain</span>
-                            <span class="pmx-selector__labelField">Field</span>
+                          <div class="pmx-selector__block ">
+                            <span class="pmx-selector__blockPrefix">−</span>
+                            <span class="pmx-selector__blockLabel">Contain</span>
+                            <span class="pmx-selector__blockField">Field</span>
                           </div>
                         </div>
                       </div>
@@ -322,10 +322,10 @@
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                         <div class="pmx-selector__value">
-                          <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelIcon">ބ</span>
-                            <span class="pmx-selector__labelType">Contain</span>
-                            <span class="pmx-selector__labelField">Field</span>
+                          <div class="pmx-selector__block ">
+                            <span class="pmx-selector__blockPrefix">ބ</span>
+                            <span class="pmx-selector__blockLabel">Contain</span>
+                            <span class="pmx-selector__blockField">Field</span>
                           </div>
                         </div>
                       </div>
@@ -345,10 +345,10 @@
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                         <div class="pmx-selector__value">
-                          <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelIcon">ބ</span>
-                            <span class="pmx-selector__labelType">Contain</span>
-                            <span class="pmx-selector__labelField">Field</span>
+                          <div class="pmx-selector__block ">
+                            <span class="pmx-selector__blockPrefix">ބ</span>
+                            <span class="pmx-selector__blockLabel">Contain</span>
+                            <span class="pmx-selector__blockField">Field</span>
                           </div>
                         </div>
                       </div>
@@ -368,10 +368,10 @@
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                         <div class="pmx-selector__value">
-                          <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelIcon">ބ</span>
-                            <span class="pmx-selector__labelType">Contain</span>
-                            <span class="pmx-selector__labelField">Field</span>
+                          <div class="pmx-selector__block ">
+                            <span class="pmx-selector__blockPrefix">ބ</span>
+                            <span class="pmx-selector__blockLabel">Contain</span>
+                            <span class="pmx-selector__blockField">Field</span>
                           </div>
                         </div>
                       </div>
