--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -12,11 +12,11 @@
               <li class="itemBoxTable__bodyCell js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner">
 
-                    <div class="pmx-selector">
+                    <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__value">
-                        <div class="pmx-selector__label ">
-                          <span class="pmx-selector__labelType">Any •</span>
-                          <span class="pmx-selector__labelField">Typed keyword</span>
+                        <div class="pmx-selector__block ">
+                          <span class="pmx-selector__blockLabel">Any</span>
+                          <span class="pmx-selector__blockField">Typed keyword</span>
                         </div>
                       </div>
                     </div>
@@ -28,11 +28,11 @@
                 <li class="itemBoxTable__bodyCell js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner">
 
-                      <div class="pmx-selector">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__value">
-                          <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelType">Title •</span>
-                            <span class="pmx-selector__labelField">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
+                          <div class="pmx-selector__block ">
+                            <span class="pmx-selector__blockLabel">title</span>
+                            <span class="pmx-selector__blockField">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
                           </div>
                         </div>
                       </div>
@@ -44,11 +44,11 @@
                 <li class="itemBoxTable__bodyCell  js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner">
 
-                      <div class="pmx-selector">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__value">
-                          <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelType">Assigned to •</span>
-                            <span class="pmx-selector__labelField">Nick De Jaeger</span>
+                          <div class="pmx-selector__block ">
+                            <span class="pmx-selector__blockLabel">Assigned to</span>
+                            <span class="pmx-selector__blockField">Nick De Jaeger</span>
                           </div>
                         </div>
                       </div>
@@ -60,11 +60,12 @@
                 <li class="itemBoxTable__bodyCell  js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner">
 
-                      <div class="pmx-selector">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__value">
-                          <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelType">Priority •</span>
-                            <span class="pmx-selector__labelField">dialog-wrapper</span>
+                          <div class="pmx-selector__block ">
+                            <span class="pmx-selector__blockPrefix">−</span>
+                            <span class="pmx-selector__blockLabel">Priority</span>
+                            <span class="pmx-selector__blockField">dialog-wrapper</span>
                           </div>
                         </div>
                       </div>
