--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -10,68 +10,112 @@
     <div class="itemBoxTable__body">
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
-            <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">ऄ</i>
-            </div>
+          <div class="itemBoxTable__bodyCellInner">
+            <i class="itemBoxTable__action">ऄ</i>
+          </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-            <div class="itemBoxTable__bodyCellInner ">My private smartlists</div>
+          <div class="itemBoxTable__bodyCellInner ">My private smartlists</div>
         </li>
       </ul>
       <div class="itemBox itemBox--children">
         <div class="itemBoxTable">
           <div class="itemBoxTable__body">
             <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Private smartlist 1</div>
-                </li>
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__value">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockLabel">Workspace</span>
+                        <span class="pmx-selector__blockField">My private smartlists</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
             </ul>
           </div>
         </div>
       </div><!-- /.itemBox--children -->
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
-            <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">ऄ</i>
-            </div>
+          <div class="itemBoxTable__bodyCellInner">
+            <i class="itemBoxTable__action">ऄ</i>
+          </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-            <div class="itemBoxTable__bodyCellInner ">My shared smartlists</div>
+          <div class="itemBoxTable__bodyCellInner ">My shared smartlists</div>
         </li>
       </ul>
       <div class="itemBox itemBox--children">
         <div class="itemBoxTable">
           <div class="itemBoxTable__body">
             <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Financial_milestones PMX (smartlist)</div>
-                </li>
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__value">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockLabel">Workspace</span>
+                        <span class="pmx-selector__blockField">Financial_milestones PMX (smartlist)</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
             </ul>
           </div>
         </div>
       </div><!-- /.itemBox--children -->
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
-            <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">ऄ</i>
-            </div>
+          <div class="itemBoxTable__bodyCellInner">
+            <i class="itemBoxTable__action">ऄ</i>
+          </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-            <div class="itemBoxTable__bodyCellInner ">Smartlists shared with me</div>
+          <div class="itemBoxTable__bodyCellInner ">Smartlists shared with me</div>
         </li>
       </ul>
       <div class="itemBox itemBox--children">
         <div class="itemBoxTable">
           <div class="itemBoxTable__body">
             <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Milestone Born - MAINT - Year 3</div>
-                </li>
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__value">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockLabel">Workspace</span>
+                        <span class="pmx-selector__blockField">Milestone Born - MAINT - Year 3</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
             </ul>
             <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Milestone Gerkesklooster - LIC - Year 2</div>
-                </li>
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__value">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockLabel">Workspace</span>
+                        <span class="pmx-selector__blockField">Milestone Gerkesklooster - LIC - Year 2</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
             </ul>
           </div>
         </div>
