--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -65,12 +65,12 @@
               <div class="itemBoxTable__bodyCellInner">
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required js_pmx-selector--incl-excl">
                   <div class="pmx-selector__value js_pmx-selector__value--include pmx-selector__value--selected">
-                    <div class="pmx-selector__label ">
+                    <div class="pmx-selector__block ">
                       <span class="" style="">Include</span>
                     </div>
                   </div>
                   <div class="pmx-selector__value js_pmx-selector__value--exclude">
-                    <div class="pmx-selector__label">
+                    <div class="pmx-selector__block">
                       <span class="">Exclude</span>
                     </div>
                   </div>
