--- a/_includes/popups/old-pmx-multiselect.html
+++ b/_includes/popups/old-pmx-multiselect.html
@@ -5,12 +5,12 @@
 
         <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required js_pmx-selector--incl-excl js_pmx-selector--old">
           <div class="pmx-selector__value js_pmx-selector__value--include pmx-selector__value--selected">
-            <div class="pmx-selector__label ">
+            <div class="pmx-selector__block ">
               <span class="" style="">Include</span>
             </div>
           </div>
           <div class="pmx-selector__value js_pmx-selector__value--exclude">
-            <div class="pmx-selector__label">
+            <div class="pmx-selector__block">
               <span class="">Exclude</span>
             </div>
           </div>
