--- a/_includes/blocks/colorSelector-children.html
+++ b/_includes/blocks/colorSelector-children.html
@@ -7,11 +7,21 @@
             <span class="pmx-selector__labelIcon" style="color: black;" data-color="black">܌</span>
           </div>
         </li>
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner">
+            black
+          </div>
+        </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <span class="pmx-selector__labelIcon" style="color: green;" data-color="green">܌</span>
+          </div>
+        </li>
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner">
+            green
           </div>
         </li>
       </ul>
@@ -21,11 +31,21 @@
             <span class="pmx-selector__labelIcon" style="color: red;" data-color="red">܌</span>
           </div>
         </li>
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner">
+            red
+          </div>
+        </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <span class="pmx-selector__labelIcon" style="color: blue;" data-color="blue">܌</span>
+          </div>
+        </li>
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner">
+            blue
           </div>
         </li>
       </ul>
@@ -35,6 +55,11 @@
             <span class="pmx-selector__labelIcon" style="color: yellow;" data-color="yellow">܌</span>
           </div>
         </li>
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner">
+            yellow
+          </div>
+        </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
@@ -42,11 +67,21 @@
             <span class="pmx-selector__labelIcon" style="color: orange;" data-color="orange">܌</span>
           </div>
         </li>
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner">
+            orange
+          </div>
+        </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <span class="pmx-selector__labelIcon" style="color: hotpink;" data-color="hotpink">܌</span>
+          </div>
+        </li>
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner">
+            pink
           </div>
         </li>
       </ul>
