--- a/_includes/popups/multiSelector2.html
+++ b/_includes/popups/multiSelector2.html
@@ -1,4 +1,4 @@
-<div class="multiSelector" id="multiSelector-2">
+<div class="multiSelector multiSelector--popup" id="multiSelector-2">
 
   <div class="multiSelector__box">
 
