--- a/_includes/popups/multiSelector3.html
+++ b/_includes/popups/multiSelector3.html
@@ -1,4 +1,4 @@
-<div class="multiSelector" id="multiSelector-3">
+<div class="multiSelector multiSelector--popup" id="multiSelector-3">
 
   <div class="multiSelector__box">
 
