--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -45,22 +45,22 @@
       position: relative;
       list-style: none;
       padding: 0;
-      margin: 0;
+      margin: 0 10px;
       font-size: 0;
       left: 0;
 
       li {
         position: relative;
         display: inline-block;
-        margin: 0 10px;
+        margin: 0;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
     }
 
     &__link {
-      display: block;
-      padding: 15px 2px;
+      display: inline-block;
+      padding: 15px 10px;
       color: #000;
       text-decoration: none;
       text-transform: uppercase;
