--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -63,7 +63,7 @@
                       <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPrefix">−</span>
+                            <span class="pmx-selector__blockPrefix">-</span>
                             <span class="pmx-selector__blockLabel">Priority</span>
                             <span class="pmx-selector__blockField">dialog-wrapper</span>
                           </div>
