--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -165,9 +165,11 @@
         &:before {
           content: '•';
           position: absolute;
+          left: 3px;
+          top: 50%;
+          transform: translateY(-50%);
           font-size: 12px;
           color: #D4D4D4;
-          left: 4px;
         }
       }
     }
@@ -186,10 +188,11 @@
         &:before {
           content: '•';
           position: absolute;
+          left: 3px;
+          top: 50%;
+          transform: translateY(-50%);
           font-size: 12px;
           color: #D4D4D4;
-          left: 3px;
-          top: 2px;
         }
       }
     }
@@ -202,6 +205,10 @@
   &--readonly {
     .pmx-selector__value {
       background-color: #FFF;
+
+      .pmx-selector__blockField {
+        color: #000;
+      }
     }
   }
 
