colorpicker: color is now i and now span

--- a/_includes/blocks/colorSelector-children.html
+++ b/_includes/blocks/colorSelector-children.html
@@ -4,7 +4,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <span class="pmx-selector__labelIcon" style="color: black;" data-color="black">܌</span>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: black;" data-color="black">܌</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -16,7 +16,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <span class="pmx-selector__labelIcon" style="color: green;" data-color="green">܌</span>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">܌</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -28,7 +28,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <span class="pmx-selector__labelIcon" style="color: red;" data-color="red">܌</span>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: red;" data-color="red">܌</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -40,7 +40,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <span class="pmx-selector__labelIcon" style="color: blue;" data-color="blue">܌</span>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: blue;" data-color="blue">܌</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -52,7 +52,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <span class="pmx-selector__labelIcon" style="color: yellow;" data-color="yellow">܌</span>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: yellow;" data-color="yellow">܌</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -64,7 +64,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <span class="pmx-selector__labelIcon" style="color: orange;" data-color="orange">܌</span>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: orange;" data-color="orange">܌</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -76,7 +76,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <span class="pmx-selector__labelIcon" style="color: hotpink;" data-color="hotpink">܌</span>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: hotpink;" data-color="hotpink">܌</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
