--- a/_includes/popups/colorPicker-popup.html
+++ b/_includes/popups/colorPicker-popup.html
@@ -38,7 +38,7 @@
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                      <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                      <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -90,7 +90,7 @@
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                      <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                      <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -107,7 +107,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -124,7 +124,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -141,7 +141,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
