--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -39,7 +39,7 @@
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                      <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                      <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -93,7 +93,7 @@
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                      <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                      <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -111,7 +111,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -129,7 +129,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -147,7 +147,7 @@
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</span>
+                        <span class="pmx-selector__blockPrefix js_colorIcon" style="color: green;">܌</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
