--- a/_includes/popups/colorSelector-popup.html
+++ b/_includes/popups/colorSelector-popup.html
@@ -7,37 +7,37 @@
           <ul class="itemBoxTable__bodyRow">
             <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                <span class="pmx-selector__blockPrefix" style="color: black;" data-color="black">܌</span>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: black;" data-color="black">܌</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                <span class="pmx-selector__blockPrefix" style="color: green;" data-color="green">܌</span>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">܌</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                <span class="pmx-selector__blockPrefix" style="color: red;" data-color="red">܌</span>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: red;" data-color="red">܌</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                <span class="pmx-selector__blockPrefix" style="color: blue;" data-color="blue">܌</span>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: blue;" data-color="blue">܌</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                <span class="pmx-selector__blockPrefix" style="color: yellow;" data-color="yellow">܌</span>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: yellow;" data-color="yellow">܌</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                <span class="pmx-selector__blockPrefix" style="color: orange;" data-color="orange">܌</span>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: orange;" data-color="orange">܌</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-                <span class="pmx-selector__blockPrefix" style="color: hotpink;" data-color="hotpink">܌</span>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: hotpink;" data-color="hotpink">܌</i>
               </div>
             </li>
           </ul>
