--- a/_includes/components/selectors/collapsed/status.html
+++ b/_includes/components/selectors/collapsed/status.html
@@ -1,8 +1,8 @@
 <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP" data-popid="#multiSelector-1">
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
-      <span class="pmx-selector__blockField">Not started</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
     </div>
   </div>
 </div>
