--- a/_includes/components/selectors/expanded/tags.html
+++ b/_includes/components/selectors/expanded/tags.html
@@ -1,20 +1,20 @@
 <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
-      <span class="pmx-selector__blockField">dev-team</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
     </div>
   </div>
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
-      <span class="pmx-selector__blockField">back-end</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
     </div>
   </div>
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
-      <span class="pmx-selector__blockField">critical</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
     </div>
   </div>
 </div>
