--- a/_includes/popups/multiSelector-advanced.html
+++ b/_includes/popups/multiSelector-advanced.html
@@ -19,11 +19,11 @@
               <div class="itemBoxTable__bodyCellInner">
 
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                  <div class="pmx-selector__value">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
-                      <span class="pmx-selector__blockPrefix">ބ</span>
-                      <span class="pmx-selector__blockLabel">Contain</span>
-                      <span class="pmx-selector__blockField">Field</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ބ</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
                     </div>
                   </div>
                 </div>
@@ -43,11 +43,11 @@
               <div class="itemBoxTable__bodyCellInner">
 
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                  <div class="pmx-selector__value">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
-                      <span class="pmx-selector__blockPrefix">−</span>
-                      <span class="pmx-selector__blockLabel">Contain</span>
-                      <span class="pmx-selector__blockField">Field</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">−</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
                     </div>
                   </div>
                 </div>
@@ -68,11 +68,11 @@
               <div class="itemBoxTable__bodyCellInner">
 
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                  <div class="pmx-selector__value">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
-                      <span class="pmx-selector__blockPrefix">−</span>
-                      <span class="pmx-selector__blockLabel">Contain</span>
-                      <span class="pmx-selector__blockField">Field</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">−</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
                     </div>
                   </div>
                 </div>
@@ -242,11 +242,11 @@
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                        <div class="pmx-selector__value">
+                        <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPrefix">+</span>
-                            <span class="pmx-selector__blockLabel">Contain</span>
-                            <span class="pmx-selector__blockField">Field</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">+</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
                           </div>
                         </div>
                       </div>
@@ -266,11 +266,11 @@
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                        <div class="pmx-selector__value">
+                        <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPrefix">−</span>
-                            <span class="pmx-selector__blockLabel">Contain</span>
-                            <span class="pmx-selector__blockField">Field</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">−</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
                           </div>
                         </div>
                       </div>
@@ -321,11 +321,11 @@
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                        <div class="pmx-selector__value">
+                        <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPrefix">ބ</span>
-                            <span class="pmx-selector__blockLabel">Contain</span>
-                            <span class="pmx-selector__blockField">Field</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ބ</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
                           </div>
                         </div>
                       </div>
@@ -344,11 +344,11 @@
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                        <div class="pmx-selector__value">
+                        <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPrefix">ބ</span>
-                            <span class="pmx-selector__blockLabel">Contain</span>
-                            <span class="pmx-selector__blockField">Field</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ބ</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
                           </div>
                         </div>
                       </div>
@@ -367,11 +367,11 @@
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-                        <div class="pmx-selector__value">
+                        <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPrefix">ބ</span>
-                            <span class="pmx-selector__blockLabel">Contain</span>
-                            <span class="pmx-selector__blockField">Field</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ބ</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
                           </div>
                         </div>
                       </div>
