--- a/_includes/components/selectors/collapsed/date.html
+++ b/_includes/components/selectors/collapsed/date.html
@@ -1,7 +1,7 @@
 <div class="pmx-selector pmx-selector--collapsed">
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockField">11/17/2017</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
     </div>
   </div>
 </div>
