--- a/_includes/components/selectors/collapsed/teams.html
+++ b/_includes/components/selectors/collapsed/teams.html
@@ -1,20 +1,20 @@
 <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPrefix" style="color: green;">܌</span>
-      <span class="pmx-selector__blockField">Squad X</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
     </div>
   </div>
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPrefix" style="color: blue;">܌</span>
-      <span class="pmx-selector__blockField">Squad Y</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: blue;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
     </div>
   </div>
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPrefix" style="color: orange;">܌</span>
-      <span class="pmx-selector__blockField">Squad Z</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: orange;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
     </div>
   </div>
 </div>
