--- a/_includes/components/selectors/expanded/billable.html
+++ b/_includes/components/selectors/expanded/billable.html
@@ -1,12 +1,12 @@
 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-  <div class="pmx-selector__value">
+  <div class="pmx-selector__item">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPrefix">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</span>
     </div>
   </div>
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block">
-      <span class="pmx-selector__blockPrefix" style="color: red;">ܐ</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: red;">ܐ</span>
     </div>
   </div>
 </div>
