--- a/_includes/components/selectors/expanded/status.html
+++ b/_includes/components/selectors/expanded/status.html
@@ -1,17 +1,17 @@
 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-  <div class="pmx-selector__value">
+  <div class="pmx-selector__item">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockField">Not started</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
     </div>
   </div>
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockField">Ongoing</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
     </div>
   </div>
-  <div class="pmx-selector__value">
+  <div class="pmx-selector__item">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockField">Done</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
     </div>
   </div>
 </div>
