--- a/_includes/components/selectors/expanded/teams.html
+++ b/_includes/components/selectors/expanded/teams.html
@@ -1,22 +1,22 @@
 <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockField">Squad A</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad A</span>
     </div>
   </div>
-  <div class="pmx-selector__value">
+  <div class="pmx-selector__item">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockField">Squad B</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad B</span>
     </div>
   </div>
-  <div class="pmx-selector__value">
+  <div class="pmx-selector__item">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockField">Squad C</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad C</span>
     </div>
   </div>
-  <div class="pmx-selector__value pmx-selector__value--selected">
+  <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockField">Squad X</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
     </div>
   </div>
 </div>
