--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -13,10 +13,10 @@
                   <div class="itemBoxTable__bodyCellInner">
 
                     <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__value">
+                      <div class="pmx-selector__item">
                         <div class="pmx-selector__block ">
-                          <span class="pmx-selector__blockLabel">Any</span>
-                          <span class="pmx-selector__blockField">Typed keyword</span>
+                          <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
+                          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
                         </div>
                       </div>
                     </div>
@@ -29,10 +29,10 @@
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--readonly">
-                        <div class="pmx-selector__value">
+                        <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockLabel">title</span>
-                            <span class="pmx-selector__blockField">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
                           </div>
                         </div>
                       </div>
@@ -45,10 +45,10 @@
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--readonly">
-                        <div class="pmx-selector__value">
+                        <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockLabel">Assigned to</span>
-                            <span class="pmx-selector__blockField">Nick De Jaeger</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
                           </div>
                         </div>
                       </div>
@@ -61,11 +61,11 @@
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--readonly">
-                        <div class="pmx-selector__value">
+                        <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPrefix">-</span>
-                            <span class="pmx-selector__blockLabel">Priority</span>
-                            <span class="pmx-selector__blockField">dialog-wrapper</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">-</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dialog-wrapper</span>
                           </div>
                         </div>
                       </div>
