--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -147,58 +147,58 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    > span {
+    &Part {
       position: relative;
       display: inline-block;
       height: 22px;
       vertical-align: top;
       transition: all .3s ease-in-out;
-    }
 
-    &Prefix {
-      color: #808080;
-      transition: all .3s ease-in-out;
+      &--prefix {
+        color: #808080;
+        transition: all .3s ease-in-out;
 
-      + .pmx-selector__blockLabel {
-        padding: 0 0 0 14px;
+        + .pmx-selector__blockPart--label {
+          padding: 0 0 0 14px;
 
-        &:before {
-          content: '•';
-          position: absolute;
-          left: 3px;
-          top: 50%;
-          transform: translateY(-50%);
-          font-size: 12px;
-          color: #D4D4D4;
+          &:before {
+            content: '•';
+            position: absolute;
+            left: 3px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 12px;
+            color: #D4D4D4;
+          }
         }
       }
-    }
 
-    &Label  {
-      text-transform: uppercase;
-      color: #808080;
-      font-size: 10px;
-      line-height: 24px;
-      font-weight: 600;
-      letter-spacing: .7px;
+      &--label  {
+        text-transform: uppercase;
+        color: #808080;
+        font-size: 10px;
+        line-height: 24px;
+        font-weight: 600;
+        letter-spacing: .7px;
 
-      + .pmx-selector__blockField {
-        padding: 0 0 0 14px;
+        + .pmx-selector__blockPart--field {
+          padding: 0 0 0 14px;
 
-        &:before {
-          content: '•';
-          position: absolute;
-          left: 3px;
-          top: 50%;
-          transform: translateY(-50%);
-          font-size: 12px;
-          color: #D4D4D4;
+          &:before {
+            content: '•';
+            position: absolute;
+            left: 3px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 12px;
+            color: #D4D4D4;
+          }
         }
       }
-    }
 
-    &Field {
-      color: #808080;
+      &--field {
+        color: #808080;
+      }
     }
   }
 
