--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -16,7 +16,9 @@
 
 @import "components/itemBox.css";
 
-@import "components/selector.css";
+//@import "components/selector.css";
+@import "components/selector2.css";
+
 @import "components/multiSelector.css";
 @import "components/multiSelector-colorPicker.css";
 
